Autocomplete style improvement

--- a/dude-graph.html
+++ b/dude-graph.html
@@ -45,11 +45,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 
         ::content #autocompletePopup > div {
             background-color: var(--dude-background2-color);
-            -webkit-border-radius: 5px;
-            -moz-border-radius: 5px;
-            border-radius: 5px;
+            border: 2px solid var(--dude-background1-color);
             padding: 5px;
-            opacity: 0.95;
         }
 
         /**
