Fixed font in IE and Firefox (Edge ...)

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dude-graph - Demo</title>
     <script src="../bower_components/webcomponentsjs/webcomponents.min.js"></script>
+    <link href=https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet" type="text/css">
     <link rel="import" href="audigame/audigame.html">
     <style>
         body {
