Adapt render block title color to the block background color, closes #205

--- a/dude-graph.html
+++ b/dude-graph.html
@@ -79,11 +79,11 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             stroke-width: 4px;
         }
 
-        ::content .dude-graph-block-light {
+        ::content .dude-graph-block-title-light {
             fill: var(--dude-light1-color);
         }
 
-        ::content .dude-graph-block-dark {
+        ::content .dude-graph-block-title-dark {
             fill: var(--dude-dark1-color);
         }
 
