Use select color.

--- a/dude-graph.html
+++ b/dude-graph.html
@@ -75,7 +75,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
          */
         ::content .dude-graph-block:hover > rect.dude-graph-block-wrapper,
         ::content .dude-graph-block.dude-graph-selected > rect.dude-graph-block-wrapper {
-            stroke: var(--dude-status-info-color);
+            stroke: var(--dude-select2-color);
             stroke-width: 4px;
         }
 
@@ -98,14 +98,14 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         }
 
         ::content .dude-graph-group:hover > rect {
-            stroke: var(--dude-status-info-color);
-            stroke-width: 2px;
+            stroke: var(--dude-select2-color);
+            stroke-width: 4px;
         }
 
         ::content .dude-graph-group.dude-graph-selected > rect,
         ::content .dude-graph-group.dude-graph-active > rect {
-            stroke: var(--dude-status-info-color);
-            stroke-width: 2px;
+            stroke: var(--dude-select2-color);
+            stroke-width: 4px;
         }
 
         /**
