--- a/panels/dude-graph-create-variable.html
+++ b/panels/dude-graph-create-variable.html
@@ -15,7 +15,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 @element dude-graph-edit-block-group
 @demo demo/index.html
 -->
-<dom-module id="dude-graph-create-variable">r
+<dom-module id="dude-graph-create-variable">
     <style>
         .toolbar {
             margin-top: 16px;
