Added html as cover

--- a/demo/audigame/audigame.html
+++ b/demo/audigame/audigame.html
@@ -142,6 +142,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
               this.$.dudeGraphElement.set("graph.graphData.resources", [
                   {"item": {"name": "image1.png", "data": {"file_name": "http://goo.gl/aT8b1W", "size": 512}}},
                   {"item": {"name": "image2.png", "data": {"file_name": "http://goo.gl/eL4sot", "size": 512}}},
+                  {"item": {"name": "image2.html", "data": {"file_name": "http://goo.gl/eL4sot", "size": 512}}},
                   {"item": {"name": "sound1.mp3", "data": {"file_name": "http://goo.gl/JVcU3g", "size": 2048}}},
                   {"item": {"name": "sound2.mp3", "data": {"file_name": "http://goo.gl/64THWa", "size": 2048}}}
               ]);
